Finished first setup for Page class and tests Now starting with users
